syntax = "proto3";

package kjkrol.numseq;

option java_multiple_files = true;
option java_package = "kjkrol.grpc.numseq";
option java_outer_classname = "NumSeqProto";
option objc_class_prefix = "NS";

message NumSeqRequest {
    int32 total = 1;
}

message NumSeqResponse {
    int32 total = 1;
    repeated int32 number = 2;
}

service NumSeqService {
    rpc NumSeq (NumSeqRequest) returns (stream NumSeqResponse){};
}